--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <template id="toast">
+  <template id="tm-template">
     <div class="toast" aria-live="polite">
       <h4 class="toast-title">Title</h4>
       <p class="toast-message">This is the toast message</p>
@@ -28,10 +28,10 @@
     <h1>ToastManager</h1>
     <p class="lg">A tool to build and send toasts with ease</p>
     <div class="hero-form">
-      <input type="text" placeholder="Something random..." maxlength="100" minlength="1">
+      <input type="text" id="toast-content" placeholder="Something random...">
       <div class="btn-group">
         <button id="toast-trigger" class="primary">Try it out</button>
-        <a href="https://github.com/isaacmaddox/toast-manager" target="_blank" class="btn">
+        <a href=" https://github.com/isaacmaddox/toast-manager" target="_blank" class="btn">
           <svg height="19" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="19" data-view-component="true"
             class="octicon octicon-mark-github v-align-middle color-fg-default">
             <path
