--- a/index.html
+++ b/index.html
@@ -1,50 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/dark.min.css" />
+    <link rel="stylesheet" href="toast_manager.css" />
+    <link rel="stylesheet" href="style-page.css" />
+    <title>ToastManager</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="toast_manager.css" />
-  <link rel="stylesheet" href="style-page.css" />
-  <title>ToastManager</title>
-</head>
-
-<body>
-  <template id="tm-template">
-    <div class="toast" aria-live="polite">
-      <h4 class="toast-title">Title</h4>
-      <p class="toast-message">This is the toast message</p>
-      <button class="dismiss" type="button" aria-label="Dismiss">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd"
-            d="M6.16634 16.773C5.87345 17.0659 5.87345 17.5408 6.16634 17.8336C6.45923 18.1265 6.93411 18.1265 7.227 17.8336L12 13.0607L16.7729 17.8337C17.0658 18.1265 17.5407 18.1265 17.8336 17.8337C18.1265 17.5408 18.1265 17.0659 17.8336 16.773L13.0606 12L17.8336 7.22705C18.1265 6.93415 18.1265 6.45928 17.8336 6.16639C17.5407 5.87349 17.0658 5.87349 16.7729 6.16639L12 10.9394L7.22699 6.16639C6.93409 5.8735 6.45922 5.8735 6.16633 6.16639C5.87343 6.45928 5.87343 6.93416 6.16633 7.22705L10.9393 12L6.16634 16.773Z"
-            fill="#3E4138" />
-        </svg>
-      </button>
-    </div>
-  </template>
-
-  <header>
-    <h1>ToastManager</h1>
-    <p class="lg">A tool to build and send toasts with ease</p>
-    <div class="hero-form">
-      <input type="text" id="toast-content" placeholder="Something random...">
-      <div class="btn-group">
-        <button id="toast-trigger" class="primary">Try it out</button>
-        <a href=" https://github.com/isaacmaddox/toast-manager" target="_blank" class="btn">
-          <svg height="19" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="19" data-view-component="true"
-            class="octicon octicon-mark-github v-align-middle color-fg-default">
+  <body>
+    <template id="tm-template">
+      <div class="toast" aria-live="polite">
+        <h4 class="toast-title">Title</h4>
+        <p class="toast-message">This is the toast message</p>
+        <button class="dismiss" type="button" aria-label="Dismiss">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
-              d="M12.5.75C6.146.75 1 5.896 1 12.25c0 5.089 3.292 9.387 7.863 10.91.575.101.79-.244.79-.546 0-.273-.014-1.178-.014-2.142-2.889.532-3.636-.704-3.866-1.35-.13-.331-.69-1.352-1.18-1.625-.402-.216-.977-.748-.014-.762.906-.014 1.553.834 1.769 1.179 1.035 1.74 2.688 1.25 3.349.948.1-.747.402-1.25.733-1.538-2.559-.287-5.232-1.279-5.232-5.678 0-1.25.445-2.285 1.178-3.09-.115-.288-.517-1.467.115-3.048 0 0 .963-.302 3.163 1.179.92-.259 1.897-.388 2.875-.388.977 0 1.955.13 2.875.388 2.2-1.495 3.162-1.179 3.162-1.179.633 1.581.23 2.76.115 3.048.733.805 1.179 1.825 1.179 3.09 0 4.413-2.688 5.39-5.247 5.678.417.36.776 1.05.776 2.128 0 1.538-.014 2.774-.014 3.162 0 .302.216.662.79.547C20.709 21.637 24 17.324 24 12.25 24 5.896 18.854.75 12.5.75Z">
-            </path>
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M6.16634 16.773C5.87345 17.0659 5.87345 17.5408 6.16634 17.8336C6.45923 18.1265 6.93411 18.1265 7.227 17.8336L12 13.0607L16.7729 17.8337C17.0658 18.1265 17.5407 18.1265 17.8336 17.8337C18.1265 17.5408 18.1265 17.0659 17.8336 16.773L13.0606 12L17.8336 7.22705C18.1265 6.93415 18.1265 6.45928 17.8336 6.16639C17.5407 5.87349 17.0658 5.87349 16.7729 6.16639L12 10.9394L7.22699 6.16639C6.93409 5.8735 6.45922 5.8735 6.16633 6.16639C5.87343 6.45928 5.87343 6.93416 6.16633 7.22705L10.9393 12L6.16634 16.773Z"
+              fill="#3E4138"
+            />
           </svg>
-          GitHub
-        </a>
+        </button>
       </div>
-    </div>
-  </header>
+    </template>
 
-  <script src="./js/scripts.js" type="module"></script>
-</body>
+    <header>
+      <h1>ToastManager</h1>
+      <p class="lg">A tool to build and send toasts with ease</p>
+      <div class="hero-form">
+        <input type="text" id="toast-content" placeholder="Hello, World!" />
+        <div class="btn-group">
+          <button id="toast-trigger" class="primary btn">Try it out</button>
+          <a href=" https://github.com/isaacmaddox/toast-manager" target="_blank" class="btn">
+            <svg height="19" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="19" data-view-component="true" class="octicon octicon-mark-github v-align-middle color-fg-default">
+              <path
+                d="M12.5.75C6.146.75 1 5.896 1 12.25c0 5.089 3.292 9.387 7.863 10.91.575.101.79-.244.79-.546 0-.273-.014-1.178-.014-2.142-2.889.532-3.636-.704-3.866-1.35-.13-.331-.69-1.352-1.18-1.625-.402-.216-.977-.748-.014-.762.906-.014 1.553.834 1.769 1.179 1.035 1.74 2.688 1.25 3.349.948.1-.747.402-1.25.733-1.538-2.559-.287-5.232-1.279-5.232-5.678 0-1.25.445-2.285 1.178-3.09-.115-.288-.517-1.467.115-3.048 0 0 .963-.302 3.163 1.179.92-.259 1.897-.388 2.875-.388.977 0 1.955.13 2.875.388 2.2-1.495 3.162-1.179 3.162-1.179.633 1.581.23 2.76.115 3.048.733.805 1.179 1.825 1.179 3.09 0 4.413-2.688 5.39-5.247 5.678.417.36.776 1.05.776 2.128 0 1.538-.014 2.774-.014 3.162 0 .302.216.662.79.547C20.709 21.637 24 17.324 24 12.25 24 5.896 18.854.75 12.5.75Z"
+              ></path>
+            </svg>
+            GitHub
+          </a>
+        </div>
+      </div>
+    </header>
 
+    <section id="try">
+      <h2>Try it out</h2>
+      <div id="try-form">
+        <label for="toast-options-title">
+          Title
+          <input type="text" id="toast-options-title" />
+        </label>
+        <label for="toast-options-message">
+          Message
+          <input type="text" id="toast-options-message" />
+        </label>
+        <label for="toast-options-duration">
+          Duration (ms, 0 = infinite)
+          <input type="number" id="toast-options-duration" />
+        </label>
+        <label for="toast-options-type">
+          Type
+          <select id="toast-options-type">
+            <option value="neutral">Neutral</option>
+            <option value="success">Success</option>
+            <option value="warning">Warning</option>
+            <option value="error">Error</option>
+          </select>
+        </label>
+        <div class="advanced">
+          <label for="toast-options-dismissable">
+            <input type="checkbox" class="visuallyhidden" id="toast-options-dismissable" checked />
+            Dismissable?
+          </label>
+          <label for="toast-options-bg">
+            Background color
+            <input type="text" id="toast-options-bg" />
+          </label>
+          <label for="toast-options-border">
+            Border color
+            <input type="text" id="toast-options-border" />
+          </label>
+          <label for="toast-options-border">
+            Border color (hover)
+            <input type="text" id="toast-options-border-hover" />
+          </label>
+          <label for="toast-options-text">
+            Text color
+            <input type="text" id="toast-options-text" />
+          </label>
+          <label for="toast-options-title">
+            Title text color
+            <input type="text" id="toast-options-title" />
+          </label>
+          <label for="toast-options-dismiss">
+            Dismiss button color
+            <input type="text" id="toast-options-dismiss" />
+          </label>
+          <label for="toast-options-dismiss-hover">
+            Dismiss button color (hover)
+            <input type="text" id="toast-options-dismiss-hover" />
+          </label>
+        </div>
+        <button class="btn toggle" id="show-advanced">Show advanced options</button>
+        <button class="btn primary" id="create-custom-toast">Toast</button>
+      </div>
+    </section>
+
+    <script type="module" src="./js/scripts.js"></script>
+  </body>
 </html>
