Update home page a little

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/dark.min.css" />
     <link rel="stylesheet" href="toast_manager.css" />
     <link rel="stylesheet" href="style-page.css" />
+    <link rel="shortcut icon" href="./favicon.png" sizes="64x64" />
     <title>ToastManager</title>
   </head>
 
@@ -108,6 +109,11 @@
         <button class="btn primary" id="create-custom-toast">Toast</button>
       </div>
     </section>
+
+    <footer>
+      <p>Made by <a href="https://www.linkedin.com/in/isaac-maddox/" target="_blank">Isaac Maddox</a></p>
+      <p><a href="https://github.com/isaacmaddox/toast-manager" target="_blank">View on Github</a></p>
+    </footer>
 
     <script type="module" src="./js/scripts.js"></script>
   </body>
